fix: immutable collections operation error for sqlite